[package]
name = "rlifesrc"
version = "0.1.0"
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
combine = "3.8.1"
rand = "0.6.5"
pancurses = { version = "0.16.1", optional = true }
stopwatch = { version = "0.0.7", optional = true }

[features]
default = ["tui"]
tui = ["pancurses", "stopwatch"]
