[package]
name = "rlifesrc-lib"
version = "0.5.1"
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
edition = "2018"
description = "A Game of Life pattern searcher (library)."
homepage = "https://github.com/AlephAlpha/rlifesrc/tree/master/lib"
repository = "https://github.com/AlephAlpha/rlifesrc"
license = "MIT"
readme = "README_en.md"
keywords = ["game-of-life", "cellular-automata"]

[dependencies]
auto_enums = "0.7.12"
bitflags = "1.3.2"
ca-formats = { version = "0.3.3", features = ["unknown"], optional = true }
ca-rules = "0.3.3"
displaydoc = "0.2.3"
educe = "0.4.18"
from_variants = "0.6.0"
getrandom = "0.2.3"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"], optional = true }
thiserror = "1.0.29"

[features]
default = ["serde"]

# Supports chosing random state for wasm32-unknown-unknown target.
# See https://docs.rs/getrandom/*/getrandom/index.html#webassembly-support
js = ["serde", "getrandom/js"]

# Supports reading RLE as known cells.
read-rle = ["serde", "ca-formats"]

# Supports saving extra information.
save-extra = ["serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs_rs"]
