[package]
name = "rlifesrc-lib"
version = "0.6.1"
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
edition = "2021"
description = "A Game of Life pattern searcher (library)."
homepage = "https://github.com/AlephAlpha/rlifesrc/tree/master/lib"
repository = "https://github.com/AlephAlpha/rlifesrc"
license = "MIT"
readme = "README_en.md"
keywords = ["game-of-life", "cellular-automata"]

[dependencies]
auto_enums = "0.8.1"
bitflags = "2.3.3"
ca-formats = { version = "0.3.5", features = ["unknown"], optional = true }
ca-rules = "0.3.5"
displaydoc = "0.2.4"
educe = "0.4.22"
from_variants = "1.0.2"
getrandom = "0.2.10"
rand = "0.8.5"
serde = { version = "1.0.166", features = ["derive"], optional = true }
thiserror = "1.0.43"

[features]
default = ["serde"]

# Supports choosing random state for wasm32-unknown-unknown target.
# See https://docs.rs/getrandom/*/getrandom/index.html#webassembly-support
js = ["getrandom/js"]

# Supports reading RLE as known cells.
read-rle = ["serde", "ca-formats"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs_rs"]
