[package]
name = "rlifesrc"
version = "0.6.0"
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
edition = "2021"
description = "A Game of Life pattern searcher."
homepage = "https://github.com/AlephAlpha/rlifesrc/tree/master/tui"
repository = "https://github.com/AlephAlpha/rlifesrc"
license = "MIT"
readme = "README_en.md"
keywords = ["game-of-life", "cellular-automata"]

[dependencies]
clap = { version = "4.0.32", features = ["cargo"] }
crossterm = { version = "0.25.0", features = ["event-stream"], optional = true }
futures-executor = { version = "0.3.25", optional = true }
futures-util = { version = "0.3.25", optional = true }
rlifesrc-lib = { path = "../lib/", version = "0.6.0" }
serde_json = "1.0.91"
serde_yaml = "0.9.16"
toml = "0.7.1"

[features]
default = ["tui"]

# Enables TUI.
tui = ["crossterm", "futures-executor", "futures-util"]
