[package]
name = "rlifesrc"
version = "0.6.1"
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
edition = "2021"
description = "A Game of Life pattern searcher."
homepage = "https://github.com/AlephAlpha/rlifesrc/tree/master/tui"
repository = "https://github.com/AlephAlpha/rlifesrc"
license = "MIT"
readme = "README_en.md"
keywords = ["game-of-life", "cellular-automata"]

[dependencies]
clap = { version = "4.2.1", features = ["cargo"] }
crossterm = { version = "0.26.1", features = ["event-stream"], optional = true }
futures-executor = { version = "0.3.27", optional = true }
futures-util = { version = "0.3.27", optional = true }
rlifesrc-lib = { path = "../lib/", version = "0.6.1" }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
toml = "0.7.3"

[features]
default = ["tui"]

# Enables TUI.
tui = ["crossterm", "futures-executor", "futures-util"]
