[package]
name = "rlifesrc-web"
version = "0.6.0"
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
edition = "2021"
description = "A Game of Life pattern searcher."
homepage = "https://github.com/AlephAlpha/rlifesrc/tree/master/web"
repository = "https://github.com/AlephAlpha/rlifesrc"
license = "MIT"
readme = "README_en.md"
keywords = ["game-of-life", "cellular-automata"]

[dependencies]
build-time = "0.1.1"
gloo = "0.7.0"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
js-sys = "0.3.57"
log = "0.4.17"
once_cell = "1.12.0"
pulldown-cmark = "0.9.1"
rlifesrc-lib = { path = "../lib/", version = "0.6.0", features = [
  "js",
  "read-rle",
] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
wasm-bindgen = "0.2.81"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.57", features = [
  "Blob",
  "Event",
  "EventTarget",
  "HtmlAnchorElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "MouseEvent",
  "Selection",
  "Url",
  "Window",
] }
yew = "0.19.3"
yew-agent = "0.1.0"
