[package]
name = "rlifesrc-web"
version = "0.6.1"
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
edition = "2021"
description = "A Game of Life pattern searcher."
homepage = "https://github.com/AlephAlpha/rlifesrc/tree/master/web"
repository = "https://github.com/AlephAlpha/rlifesrc"
license = "MIT"
readme = "README_en.md"
keywords = ["game-of-life", "cellular-automata"]

[dependencies]
build-time = "0.1.3"
gloo = "0.10.0"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
js-sys = "0.3.64"
log = "0.4.20"
once_cell = "1.18.0"
pulldown-cmark = "0.9.3"
rlifesrc-lib = { path = "../lib/", version = "0.6.1", features = [
  "js",
  "read-rle",
] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.107"
wasm-bindgen = "0.2.87"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.64", features = [
  "Blob",
  "Event",
  "EventTarget",
  "HtmlAnchorElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "MouseEvent",
  "Selection",
  "Url",
  "Window",
] }
yew = { version = "0.20.0", features = ["csr"] }
yew-agent = "0.2.0"
